redash/v5.0.2/aws/elastic-ip.tf
resource "aws_eip" "redash-elastic-ip" {
  instance = "${aws_instance.redash-instance.id}"
  vpc      = true
}
