redash/v5.0.2/aws/vpc.tf
#
# VPC Resources
#  * VPC
#  * Subnets
#  * Internet Gateway
#  * Route Table
#

resource "aws_vpc" "redash-vpc" {
  cidr_block = "10.0.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support = true

  tags = {
      Name = "redash-vpc-${random_uuid.uuid.result}",
      CreatedBy= "env0"
  }
}

resource "aws_subnet" "redash-subnet" {
  count = 1
  availability_zone = "${data.aws_availability_zones.available.names[count.index]}"
  cidr_block        = "10.0.${count.index}.0/24"
  vpc_id            = "${aws_vpc.redash-vpc.id}"

  tags = {
      Name = "redash-subnet-${random_uuid.uuid.result}",
      CreatedBy = "env0"
  }
}

resource "aws_internet_gateway" "redash-ig" {
  vpc_id = "${aws_vpc.redash-vpc.id}"

  tags = {
    Name = "redash-internet-gateway-${random_uuid.uuid.result}",
    CreatedBy = "env0"
  }
}

resource "aws_route_table" "redash-rt" {
  vpc_id = "${aws_vpc.redash-vpc.id}"

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "${aws_internet_gateway.redash-ig.id}"
  }

  tags = {
    Name = "redash-routing-table-${random_uuid.uuid.result}",
    CreatedBy = "env0"
  }
}

resource "aws_route_table_association" "redash-rt-association" {
  count = 1
  subnet_id      = "${aws_subnet.redash-subnet.*.id[count.index]}"
  route_table_id = "${aws_route_table.redash-rt.id}"
}
